objects/LAT_OpportunityLineItem__c.object
<CustomObject>
    <fields>
        <fullName>LAT_AR_Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_AR_MaxDiscount__c</fullName>
        <label>Max Discount %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_AR_ProductQuota__c</fullName>
        <label>Product Quota</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_AR_SaveWithExceededQuota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save With Exceeded Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_AR_SentToApproveDiscount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Approve Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_AR_UOM__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_AuxBonif__c</fullName>
        <label>Aux bonif</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_IsSumInQuota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is sum in quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Backorder__c</fullName>
        <description>Identifica que o item do pedido entrou em back order. Acontece somente após retorno do item do JDEdwards. Se 1 o item está em back order.</description>
        <formula>IF(LAT_StatusDescription__c = &apos;Back Order&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backorder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BottlePrice__c</fullName>
        <formula>if(LAT_BottlesPerBoxFormula__c  &lt;&gt; 0,LAT_UnitPrice__c / LAT_BottlesPerBoxFormula__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preço Garrafa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_BottlesPerBoxFormula__c</fullName>
        <formula>LAT_Product__r.LAT_BottlesPerBox__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G/Caixa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BottlesPerBox__c</fullName>
        <label>Bottles per box</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_C9Quantity__c</fullName>
        <label>C9 Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_CDAction__c</fullName>
        <inlineHelpText>U: Update
C: Cancel
I: Insert</inlineHelpText>
        <label>Código ação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_CDUnit__c</fullName>
        <formula>LAT_Product__r.LAT_CDUnit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código da unidade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CdLineStatus__c</fullName>
        <label>Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CdPaymentTerm__c</fullName>
        <formula>LAT_Product__r.LAT_CdPaymentTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Condição de pagamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CdUnitBonification__c</fullName>
        <formula>LAT_Product__r.LAT_BonusBaseQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código de unidade de bonificação</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_ConsumedQuoteQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cantidad Cota Consumida</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_ConsumedQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cota Consumida</label>
        <referenceTo>LAT_DetalheCotaMarket__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_CuponQuantity__c</fullName>
        <description>Preenchido por trigger (before update) através de busca na tabela de cupons (quotas de produto) e conterá a quantidade disponvél por quota para aquele item.</description>
        <inlineHelpText>Preenchido por trigger (before update) através de busca na tabela de cupons (quotas de produto) e conterá a quantidade disponvél por quota para aquele item.</inlineHelpText>
        <label>Cupom_qtde</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_DsPaymentTerm__c</fullName>
        <formula>LAT_Product__r.LAT_DsPaymentTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cond Pagto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_FormatField__c</fullName>
        <label>Campo de formatação</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LAT_FreightPercent__c</fullName>
        <label>% Frete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_INOutlineItem__c</fullName>
        <label>Indicador da importância dos impostos</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_IPI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IPI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_IndexMarca__c</fullName>
        <label>Index Marca</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integração</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_IsAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is  Admin?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_JDETotalDiscount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field storages the field ratePercentDiscountsAndCharges field in the priceCatalogueDetails of the PricaCatalogue Response. This represents the summarized discounts of the current line.</description>
        <label>JDE Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CDLineStatusFrom__c</fullName>
        <label>Status (From)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CancellationReason__c</fullName>
        <label>Cancellation reason</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Country__c</fullName>
        <description>Field used to filter formula fields, workflow rules, etc since Opportunity Product has no record type to filter. A trigger copies the field Country from the related Account to this field.</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_EstimatedDeliveryDate__c</fullName>
        <label>Estimated delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_KAMPromisedDate__c</fullName>
        <label>KAM promised date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_LogisticsPromisedDate__c</fullName>
        <label>Logistics promised date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Quota__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by the system to relate the Opportunity Product to the Quota that was valid by the time the Opportunity Product was send to JDE.</description>
        <label>Quota</label>
        <referenceTo>LAT_MX_QTA_Quota__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_RealDeliveryDate__c</fullName>
        <label>Real delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_SignedDatedReceipt__c</fullName>
        <label>Signed and dated receipt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_MultipleQuantity__c</fullName>
        <label>Multiple quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_NFTotal__c</fullName>
        <label>NF Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_NFValue__c</fullName>
        <label>NF Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_NROrderLine__c</fullName>
        <label>Número da linha de pedido JDE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_NROrder_Item__c</fullName>
        <label>Número da linha do item</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_NumericStatusCode__c</fullName>
        <formula>VALUE( LAT_CdLineStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código status numérico</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_OpportunityProductOrderLineJDE__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Opportunity Product Order Line JDE</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_OpportunityRecordTypeId__c</fullName>
        <formula>LAT_Opportunity__r.RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity RecordType Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>LAT_Opportunity__c</referenceTo>
        <relationshipLabel>OpportunityLineItems</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_PCBonus__c</fullName>
        <formula>LAT_Product__r.LAT_PercentualBonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bônus percentual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Pallet_Total_Quantity__c</fullName>
        <label>Pallet Total Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_PaymentConditionDescription__c</fullName>
        <label>Payment condition description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_PaymentCondition__c</fullName>
        <label>Payment condition</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_PcDiscount__c</fullName>
        <label>Porcentagem de desconto</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_PercentualBonus__c</fullName>
        <label>Percentual bonus</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_PercentualOfBonus__c</fullName>
        <label>% Bonif</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_PriceTotal__c</fullName>
        <formula>LAT_QTTotal__c  *  LAT_UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preço total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_ProductCode__c</fullName>
        <formula>LAT_Product__r.LAT_ProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>OpportunityLineItems</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_QTBonus__c</fullName>
        <label>Qt Bonif</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_QTMultiple__c</fullName>
        <formula>LAT_Product__r.LAT_QTMultiple__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qt Múltiplo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_QTTotal__c</fullName>
        <formula>IF(LAT_QTBonus__c +  LAT_Quantity__c &lt;&gt; 0,LAT_QTBonus__c +  LAT_Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qt Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_RawLinePriceComponents__c</fullName>
        <label>Raw Line Price Components</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Remover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_ServiceDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_SkuText__c</fullName>
        <label>Sku</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Sku__c</fullName>
        <formula>LAT_Product__r.LAT_Sku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sku</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_StatusDescription__c</fullName>
        <label>Descrição Status</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_TaxReplacement__c</fullName>
        <label>Tax Replacement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_TotalPrice__c</fullName>
        <formula>LAT_UnitPrice__c*LAT_Quantity__c</formula>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_UnitCode__c</fullName>
        <label>Unit code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_UnitPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_UnitWeight__c</fullName>
        <label>Weight</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Unit_Weight__c</fullName>
        <formula>LAT_Product__r.LAT_UnitWeight__c</formula>
        <label>Peso Kg</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>LAT Opportunity Product</label>
    <nameField>
        <label>LAT Opportunity Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAT Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Controla_perc_e_percent_bonus</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( LAT_CdLineStatus__c )&amp;&amp; 
LAT_PercentualOfBonus__c &gt; LAT_PercentualBonus__c, 
true,false)
&amp;&amp;NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorDisplayField>LAT_PercentualOfBonus__c</errorDisplayField>
        <errorMessage>Bonificação excedida.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Controla_perc_e_quant_de_bonificacao</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( LAT_CdLineStatus__c )&amp;&amp; 
LAT_QTBonus__c &gt; FLOOR( (LAT_PercentualBonus__c *  LAT_Quantity__c)/100 ), true,false)
&amp;&amp;NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorDisplayField>LAT_QTBonus__c</errorDisplayField>
        <errorMessage>Bonificação excedida.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Impede_alteracao_e_delecao_do_item</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  OR(ISCHANGED(LAT_Quantity__c),  ISCHANGED(LAT_QTBonus__c), ISCHANGED( LAT_PercentualOfBonus__c )), NOT(ISNEW()),  
NOT(ISNULL(LAT_NumericStatusCode__c)),  NOT(LAT_Remover__c), NOT(LAT_Integration__c),NOT(LAT_IsAdmin__c)
)</errorConditionFormula>
        <errorDisplayField>LAT_Quantity__c</errorDisplayField>
        <errorMessage>Este item não pode ser alterado devido ao seu status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Impede_cancelamento_item_do_pedido</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LAT_NumericStatusCode__c &gt; 540,LAT_NumericStatusCode__c &lt;&gt; 999,NOT(LAT_Integration__c) , LAT_Remover__c,
            NOT(LAT_IsAdmin__c))</errorConditionFormula>
        <errorDisplayField>LAT_Remover__c</errorDisplayField>
        <errorMessage>Este item não pode ser cancelado devido a seu status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_cupom_diponivel</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( LAT_CdLineStatus__c )&amp;&amp; 
LAT_Quantity__c &gt; LAT_CuponQuantity__c, 
true,false)&amp;&amp;NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorDisplayField>LAT_Quantity__c</errorDisplayField>
        <errorMessage>A quantidade pedida para este item excede a quota de produto disponível.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_multiplos</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( LAT_CdLineStatus__c )&amp;&amp; 
NOT(ISNULL(  LAT_QTMultiple__c )) &amp;&amp;  LAT_QTMultiple__c  &lt;&gt; 0 &amp;&amp; MOD( LAT_Quantity__c ,LAT_QTMultiple__c ) &lt;&gt; 0 ,
true,false)&amp;&amp;NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorDisplayField>LAT_Quantity__c</errorDisplayField>
        <errorMessage>Quantidade vendida diferente de seu múltiplo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_quantidade_como_inteiro</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( LAT_CdLineStatus__c )&amp;&amp; 
LAT_Quantity__c &lt;&gt; 0 &amp;&amp; LAT_Quantity__c &lt;&gt; FLOOR( LAT_Quantity__c ), 
true,false)&amp;&amp;NOT(LAT_IsAdmin__c)</errorConditionFormula>
        <errorDisplayField>LAT_Quantity__c</errorDisplayField>
        <errorMessage>A quantidade deve ser um número inteiro.</errorMessage>
    </validationRules>
</CustomObject>